add link to blending problem

--- a/lab_auto_1.ipynb
+++ b/lab_auto_1.ipynb
@@ -605,7 +605,10 @@
    "source": [
     "# Exercise:\n",
     "\n",
-    "1. Read the materials about pulp from the website https://coin-or.github.io/pulp/main/index.html and go through the blending problem (rewrite it to your notebook)\n",
+    "1. Read the materials about pulp from the website https://coin-or.github.io/pulp/main/index.html and go through the blending problem: https://www.coin-or.org/PuLP/CaseStudies/a_blending_problem.html (rewrite it to your notebook).\n",
+    "\n",
+    "There are two versions of the solution. I suggest you start with the first one which provides step by step solution with comments. Put each part of the code in a separate cell.\n",
+    "Only when you understand the first version, move to the second one which provides a more compact code beneficial for larger problems.\n",
     "\n",
     "2. In the blending problem, add a decision variable. Create a variable that will appear in the final product composition (i.e., the value of the variable will have a non-zero form)\n",
     "\n",
